@@ -11,6 +11,8 @@
 - Fix on Bug #62801 (mysql.dev) #13491698 Orabug DB Strange behaviour with Include in LINQ-to-Entities. Changes on SelectStatement class on method GetDefaultColumnsForFragment to asign the table name when adding a new column. Added UT VS2010 and VS2008.
 - Fix for EF4.1, Code First, CreateDatabaseScript() generates an invalid MySQL script (MySQL bug #62150, Oracle bug #13582837).
 - Fix for Connections not closed properly when using pooling (MySql bug #63942, Oracle bug #13629471).
+- Changed behavior when MySqlCommand.CommandText is null, now it throws an InvalidOperationException instead of 
+  NullReferenceException on ExecuteReader (MySql bug #64092, Oracle bug #13624659)
 
 Version 6.3.8
 - Modified ProviderManifest.xml to map TIMESTAMP db fields to the DateTime .NET type (MySQL bug #55351, Oracle bug #12652602).
